--- a/index.html
+++ b/index.html
@@ -144,40 +144,41 @@
           </div>
         </div>
       </section>
-      <section class="register d-flex justify-content-center align-items-center">
+      <section class="register d-flex justify-content-center align-items-center mt-5">
         <div class="container d-flex justify-content-center align-items-center">
-          <div class="form-register px-4 py-4">
-            <h3 class="form-title">Rejestracja</h3>
+          <div class="form-register px-4 py-4 mt-5">
+            <h3 class="form-title mb-3">Dołącz do FootballTop</h3>
+            <hr class="line w-25 mx-auto">
             <form method="post">
               <div class="form-group mb-3">
                 <label class="form-label" for="nick">Nick</label>
-                <input type="text" id="nick" class="form-control" required>
+                <input type="text" id="nick" class="form-control" required autocomplete="off">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="email">Email</label>
-                <input type="email" id="email" class="form-control" required>
+                <input type="email" id="email" class="form-control" required autocomplete="off">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="repeat_email">Powtórz Email</label>
-                <input type="email" id="repeat_email" class="form-control" required>
+                <input type="email" id="repeat_email" class="form-control" required autocomplete="off">
               </div>
               <div class="form-group mb-3">
-                <label class="form-label" for="email">Hasło</label>
-                <input type="password" id="password" class="form-control" required>
+                <label class="form-label" for="password">Hasło</label>
+                <input type="password" id="password" class="form-control" required autocomplete="off">
               </div>
               <div class="form-group mb-3">
-                <label class="form-label" for="repeat_email">Powtórz Hasło</label>
-                <input type="password" id="repeat_password" class="form-control" required>
+                <label class="form-label" for="repeat_password">Powtórz Hasło</label>
+                <input type="password" id="repeat_password" class="form-control" required autocomplete="off">
               </div>
               <div class="form-group mb-3">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="rules" required>
+                  <input class="form-check-input" type="checkbox" id="rules" required autocomplete="off">
                   <label class="form-check-label" for="rules">
                     Zapoznałem się z <a href="">regulaminem</a> i akceptuje.
                   </label>
                 </div>
               </div>
-              <button type="button" class="btn btn-success w-100">Zakończ Rejestrację</button>
+              <button type="button" class="btn btr w-100">Zakończ Rejestrację</button>
             </form>
           </div>
         </div>
