--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -10,5 +10,33 @@
   <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
  </head>
  <body>
+   <header class="header"> 
+      <nav class="navbar navbar-expand-lg py-4">
+        <div class="container-md">
+          <a href="" class="navbar-brand">FOOTBALLTOPMANAGER</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="ms-auto">
+              <ul class="navbar-nav">
+                <li class="nav-item me-3">
+                  <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item me-3">
+                  <a href="#" class="nav-link">Polityka Prywatności</a>
+                </li>
+                <li class="nav-item me-3">
+                  <a href="#" class="nav-link">Konto</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Kontakt</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
  </body>
 </html>
