--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -8,35 +8,37 @@
   <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
   <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
  </head>
  <body>
-   <header class="header"> 
-      <nav class="navbar navbar-expand-lg py-4">
-        <div class="container-md">
-          <a href="" class="navbar-brand">FOOTBALLTOPMANAGER</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="ms-auto">
-              <ul class="navbar-nav">
-                <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Polityka Prywatności</a>
-                </li>
-                <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Konto</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Kontakt</a>
-                </li>
-              </ul>
-            </div>
+  <header class="header"> 
+    <nav class="navbar navbar-expand-lg py-3 d-none d-lg-block">
+      <div class="container-fluid">
+        <div class="d-flex ms-auto">
+          <div class="search-box me-3">
+            <button class="btn-nofi" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-bell-fill"></i></button>
+            <div class="input-nofi"></div>
+          </div>
+          <div class="search-box">
+            <button class="btn-search"><i class="bi-search"></i></button>
+            <input type="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza">
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+      </div>
+    </div>
+  </div>
  </body>
 </html>
