--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -11,37 +11,26 @@
   <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
  </head>
  <body>
-<<<<<<< HEAD
   <header class="header"> 
-    <nav class="navbar navbar-expand-lg py-3 d-none d-lg-block">
+    <nav class="navbar navbar-expand-lg py-3 d-flex justify-content-around d-none d-lg-block">
       <div class="container-fluid">
-        <div class="d-flex ms-auto">
+        <a href="" class="navbar-brand">Footballtop</a>
+        <div class="d-flex">
           <div class="search-box me-3">
-            <button class="btn-nofi" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-bell-fill"></i></button>
+            <button class="btn-search"><i class="bi-search"></i></button>
+            <input type="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza">
+          </div>
+          <div class="search-box me-3">
+            <button class="btn-nofi"><i class="bi bi-bell-fill"></i></button>
             <div class="input-nofi"></div>
           </div>
           <div class="search-box">
-            <button class="btn-search"><i class="bi-search"></i></button>
-            <input type="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza">
+            <button class="btn-message"><i class="bi bi-chat-left-fill"></i></button>
+            <div class="input-message"></div>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-      </div>
-    </div>
-  </div>
-=======
->>>>>>> parent of aec97c2 (Praca nad Stroną główna gry)
  </body>
 </html>
