--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../styles/app.css">
-  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
-  <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
- </head>
- <body>
-  <header class="header"> 
-    <nav class="navbar navbar-expand-lg py-3 d-flex justify-content-around d-none d-lg-block">
-      <div class="container-fluid">
-        <a href="" class="navbar-brand">Footballtop</a>
-        <div class="d-flex">
-          <div class="search-box me-3">
-            <button class="btn-search"><i class="bi-search"></i></button>
-            <input type="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza">
-          </div>
-          <div class="search-box me-3">
-            <button class="btn-nofi"><i class="bi bi-bell-fill"></i></button>
-            <div class="input-nofi"></div>
-          </div>
-          <div class="search-box">
-            <button class="btn-message"><i class="bi bi-chat-left-fill"></i></button>
-            <div class="input-message"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../styles/app.css" />
+    <link
+      rel="stylesheet"
+      href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <div class="navbar-top d-none d-lg-block">
+        <div class="container">
+          <div class="title-header">
+
           </div>
         </div>
       </div>
-    </nav>
-  </header>
- </body>
+      <nav class="navbar navbar-bottom navbar-expand-lg d-none d-lg-block">
+        <div class="container-fluid justify-content-center align-items-center">
+          <div class="d-flex">
+            <div class="input-wrapper me-3">
+              <button class="icon">
+                <i class="bi bi-search"></i>
+              </button>
+              <input type="text" name="text" class="input" placeholder="Znajdź Zawodników, Klub, Gracza" />
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="input-wrapper me-3">
+              <button class="icon">
+                <i class="bi bi-bell-fill"></i>
+              </button>
+              <div class="input"></div>
+            </div>
+            <div class="input-wrapper">
+              <button class="icon">
+                <i class="bi bi-chat-left-fill"></i>
+              </button>
+              <div class="input"></div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="main">
+      
+    </main>
+  </body>
 </html>
