--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <nav class="navbar navbar-bottom navbar-expand-lg d-none d-lg-block">
-        <div class="container-fluid justify-content-center align-items-center">
+        <div class="container">
           <div class="d-flex">
             <div class="input-wrapper me-3">
               <button class="icon">
@@ -33,6 +33,7 @@
               <input type="text" name="text" class="input" placeholder="Znajdź Zawodników, Klub, Gracza" />
             </div>
           </div>
+          
           <div class="d-flex">
             <div class="input-wrapper me-3">
               <button class="icon">
