--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header"> 
       <nav class="navbar navbar-expand-lg py-4">
         <div class="container-md">
-          <a href="" class="navbar-brand">FOOTBALLTOPMANAGER</a>
+          <a href="index.html" class="navbar-brand">FOOTBALLTOPMANAGER</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +21,7 @@
             <div class="ms-auto">
               <ul class="navbar-nav">
                 <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Home</a>
+                  <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item me-3">
                   <a href="#" class="nav-link">Polityka Prywatności</a>
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="hero d-flex justify-content-center align-items-center">
+      <section class="hero d-flex justify-content-center align-items-center" id="hero">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
@@ -51,10 +51,10 @@
                   U nas masz taką możliwość. Dołącz do społeczności trenerów i graj za darmo w menadżera Footballtop.
                 </p>
                 <div class="d-flex justify-content-center">
-                  <a type="button" href="" class="btn-starts mb-3 me-3 w-100 text-decoration-none">
+                  <a type="button" class="btn-starts mb-3 me-3 w-100 text-decoration-none" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     Graj
                   </a>
-                  <a type="button" href="" class="btn-starts w-100 text-decoration-none">
+                  <a type="button" href="https://discord.gg/57Sp5aVARu" class="btn-starts w-100 text-decoration-none">
                     Discord
                   </a>
                 </div>
@@ -144,7 +144,7 @@
           </div>
         </div>
       </section>
-      <section class="register d-flex justify-content-center align-items-center mt-4" id="register">
+      <section class="register d-flex justify-content-center align-items-center mt-5 mb-5" id="register">
         <div class="container d-flex justify-content-center align-items-center">
           <div class="form-register px-4 py-4 mt-5 mb-5">
             <h4 class="form-title mb-3">Dołącz do FootballTop</h4>
@@ -152,23 +152,23 @@
             <form method="post">
               <div class="form-group mb-3">
                 <label class="form-label" for="nick">Nick</label>
-                <input type="text" id="nick" class="form-control" required autocomplete="off">
+                <input type="text" id="nick" class="form-control" required autocomplete="off" placeholder="Nick">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="email">Email</label>
-                <input type="email" id="email" class="form-control" required autocomplete="off">
+                <input type="email" id="email" class="form-control" required autocomplete="off" placeholder="Email">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="repeat_email">Powtórz Email</label>
-                <input type="email" id="repeat_email" class="form-control" required autocomplete="off">
+                <input type="email" id="repeat_email" class="form-control" required autocomplete="off" placeholder="Powtórz Email">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="password">Hasło</label>
-                <input type="password" id="password" class="form-control" required autocomplete="off">
+                <input type="password" id="password" class="form-control" required autocomplete="off" placeholder="Hasło">
               </div>
               <div class="form-group mb-3">
                 <label class="form-label" for="repeat_password">Powtórz Hasło</label>
-                <input type="password" id="repeat_password" class="form-control" required autocomplete="off">
+                <input type="password" id="repeat_password" class="form-control" required autocomplete="off" placeholder="Powtórz Hasło">
               </div>
               <div class="form-group mb-3">
                 <div class="form-check">
@@ -183,6 +183,31 @@
           </div>
         </div>
       </section>
+      <div class="login-modal">
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header border-1">
+                <h1 class="modal-title fs-5 text-uppercase fw-bolder" id="staticBackdropLabel">Logowanie</h1>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" ></button>
+              </div>
+              <div class="modal-body">
+                <form method="post">
+                  <div class="form-group mb-3">
+                    <label class="form-label" for="nick">Nick lub Email</label>
+                    <input type="text" id="nick" class="form-control" required autocomplete="off" placeholder="Nick lub Email">
+                  </div>
+                  <div class="form-group mb-4">
+                    <label class="form-label" for="password">Hasło</label>
+                    <input type="password" id="password" class="form-control" required autocomplete="off" placeholder="Hasło">
+                  </div>
+                  <button type="button" class="btn btr w-100">Zaloguj się</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer mt-5 px-2">
       <div class="container">
@@ -197,10 +222,10 @@
           </div>
           <div class="col-lg-6">
             <div class="d-flex justify-content-center align-items-center flex-column">
-              <a type="button" href="" class="btn-starts mt-1 mb-3 w-100 text-decoration-none">
+              <a type="button" href="#hero" class="btn-starts mt-1 mb-3 w-100 text-decoration-none">
                 Graj
               </a>
-              <a type="button" href="" class="btn-starts mb-1 w-100 text-decoration-none">
+              <a type="button" href="https://discord.gg/57Sp5aVARu" class="btn-starts mb-1 w-100 text-decoration-none">
                 Discord
               </a>
             </div>
@@ -217,3 +242,4 @@
       year.innerHTML = date.getFullYear();
     </script>
 </body>
+</html>
