--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,24 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../styles/app.css" />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <header class="header">
-      <div class="navbar-top d-none d-lg-block">
-        <div class="container">
-          <div class="title-header">
-
-          </div>
-        </div>
-      </div>
       <nav class="navbar navbar-bottom navbar-expand-lg d-none d-lg-block">
         <div class="container">
           <div class="d-flex">
@@ -33,7 +22,6 @@
               <input type="text" name="text" class="input" placeholder="Znajdź Zawodników, Klub, Gracza" />
             </div>
           </div>
-          
           <div class="d-flex">
             <div class="input-wrapper me-3">
               <button class="icon">
@@ -41,11 +29,17 @@
               </button>
               <div class="input"></div>
             </div>
-            <div class="input-wrapper">
+            <div class="input-wrapper me-3">
               <button class="icon">
                 <i class="bi bi-chat-left-fill"></i>
               </button>
               <div class="input"></div>
+            </div>
+            <div class="input-wrapper">
+              <button class="icon">
+                <i class="bi bi-gear-fill"></i>
+              </button>
+              <div class="input-settings"></div>
             </div>
           </div>
         </div>
