--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                   <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Polityka Prywatności</a>
+                  <a href="" class="nav-link">Polityka Prywatności</a>
                 </li>
                 <li class="nav-item me-3">
-                  <a href="#" class="nav-link">Konto</a>
+                  <a href="" class="nav-link">Konto</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link">Kontakt</a>
+                  <a href="src/pages/kontakt.html" class="nav-link">Kontakt</a>
                 </li>
               </ul>
             </div>
@@ -146,7 +146,7 @@
       </section>
       <section class="register d-flex justify-content-center align-items-center mt-5 mb-5" id="register">
         <div class="container d-flex justify-content-center align-items-center">
-          <div class="form-register px-4 py-4 mt-5 mb-5">
+          <div class="form-register px-4 py-4 my-5">
             <h4 class="form-title mb-3">Dołącz do FootballTop</h4>
             <hr class="line w-25 mx-auto">
             <form method="post">
@@ -174,7 +174,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="rules" required autocomplete="off">
                   <label class="form-check-label" for="rules">
-                    Zapoznałem się z <a href="">regulaminem</a> i akceptuje.
+                    Zapoznałem się z <a href="src/pages/regulamin.html">regulaminem</a> i akceptuje.
                   </label>
                 </div>
               </div>
