--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,14 +12,14 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-bottom navbar-expand-lg d-none d-lg-block">
+      <nav class="navbar navbar-bottom navbar-expand-lg py-3 d-none d-lg-block">
         <div class="container">
           <div class="d-flex">
             <div class="input-wrapper me-3">
               <button class="icon">
                 <i class="bi bi-search"></i>
               </button>
-              <input type="text" name="text" class="input" placeholder="Znajdź Zawodników, Klub, Gracza" />
+              <input type="text" name="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza" autocomplete="off">
             </div>
           </div>
           <div class="d-flex">
@@ -36,10 +36,10 @@
               <div class="input"></div>
             </div>
             <div class="input-wrapper">
-              <button class="icon">
+              <button class="icon" type="button">
                 <i class="bi bi-gear-fill"></i>
               </button>
-              <div class="input-settings"></div>
+              <div class="input"></div>
             </div>
           </div>
         </div>
