Wstępna Strona Główna Gry FootballTop ( Dalsza Praca )

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,6 +12,13 @@
   </head>
   <body>
     <header class="header">
+      <div class="header-content">
+        <div class="header-overlay mt-5"></div>
+        <div class="header-overlay mb-5"></div>
+        <div class="header-title">
+          <h1>FootballTop</h1>
+        </div>
+      </div>
       <nav class="navbar navbar-bottom navbar-expand-lg py-3 d-none d-lg-block">
         <div class="container">
           <div class="d-flex">
@@ -27,26 +34,35 @@
               <button class="icon">
                 <i class="bi bi-bell-fill"></i>
               </button>
-              <div class="input"></div>
+              <div class="input" id="notification"></div>
             </div>
             <div class="input-wrapper me-3">
               <button class="icon">
                 <i class="bi bi-chat-left-fill"></i>
               </button>
-              <div class="input"></div>
+              <div class="input" id="chat"></div>
             </div>
             <div class="input-wrapper">
               <button class="icon" type="button">
                 <i class="bi bi-gear-fill"></i>
               </button>
-              <div class="input"></div>
+              <div class="input" id="settings"></div>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main class="main">
-      
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-3 sidebar">
+            <div class="sidebar-logo"></div>
+          </div>
+          <div class="col-lg-9">
+
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
