początek bloku nadchodzące mecze

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../styles/app.css" />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../app.js" defer></script>
@@ -31,12 +27,7 @@
               <button class="icon">
                 <i class="bi bi-search"></i>
               </button>
-              <input
-                type="text"
-                name="text"
-                class="input-search"
-                placeholder="Znajdź Zawodników, Klub, Gracza"
-                autocomplete="off" />
+              <input type="text" name="text" class="input-search" placeholder="Znajdź Zawodników, Klub, Gracza" autocomplete="off" />
             </div>
           </div>
           <div class="d-flex">
@@ -65,47 +56,41 @@
     <main class="main">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-3 sidebar d-none d-lg-block">
+          <div class="col-xl-2 col-lg-3 sidebar d-none d-lg-block">
             <div class="sidebar-logo">
               <img src="../img/home_bg22.jpg" alt="logo" />
             </div>
             <div class="sidebar-player text-center">
               <div class="sidebar-nick">
-                <p>UC Salerno <span>Klub</span></p>
+                <p>UC Salerno <span>Klub</span>
+                </p>
               </div>
               <div class="sidebar-budget">
-                <p>4 380 650 <span>Budżet</span></p>
+                <p>4 380 650 <span>Budżet</span>
+                </p>
               </div>
               <div class="sidebar-coins">
-                <p>30 <span>Coins</span></p>
+                <p>30 <span>Coins</span>
+                </p>
               </div>
               <hr class="sidebar-line my-3" />
               <div class="sidebar-menu">
                 <ul class="sidebar-list">
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i class="bi bi-bullseye me-2 sidebar-icon"></i>Widok
-                      Ogólny</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-bullseye me-2 sidebar-icon"></i>Widok Ogólny </a>
                   </li>
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i
-                        class="bi bi-clipboard2-data-fill me-2 sidebar-icon"></i
-                      >Mój Zespół</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-clipboard2-data-fill me-2 sidebar-icon"></i>Mój Zespół </a>
                   </li>
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i class="bi bi-arrow-left-right me-2 sidebar-icon"></i
-                      >Transfery</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-arrow-left-right me-2 sidebar-icon"></i>Transfery </a>
                   </li>
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i class="bi bi-briefcase-fill me-2 sidebar-icon"></i
-                      >Sezon</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-briefcase-fill me-2 sidebar-icon"></i>Sezon </a>
                   </li>
                 </ul>
               </div>
@@ -113,22 +98,16 @@
               <div class="sidebar-menu mt-3">
                 <ul class="sidebar-list">
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i class="bi bi-book-fill me-2 sidebar-icon"></i>FAQ</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-book-fill me-2 sidebar-icon"></i>FAQ </a>
                   </li>
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i
-                        class="bi bi-chat-square-text-fill me-2 sidebar-icon"></i
-                      >Społeczność</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-chat-square-text-fill me-2 sidebar-icon"></i>Społeczność </a>
                   </li>
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link"
-                      ><i class="bi bi-basket-fill me-2 sidebar-icon"></i
-                      >Sklep</a
-                    >
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
                   </li>
                 </ul>
               </div>
@@ -141,8 +120,13 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-9">
-
+          <div class="col-xl-10 col-lg-9">
+            <div class="container">
+              <div class="block p-3">
+                <h2 class="match-incoming">Nadchodzące mecze</h2>
+                <hr class="match-line">
+              </div>
+            </div>
           </div>
         </div>
       </div>
