Wstepny block nadchodzace mecze

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,7 +12,7 @@
     <script src="../app.js" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header mb-5">
       <div class="header-content">
         <div class="header-overlay mt-5"></div>
         <div class="header-overlay mb-5"></div>
@@ -53,10 +53,10 @@
         </div>
       </nav>
     </header>
-    <main class="main">
+    <main class="main pt-5">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xl-2 col-lg-3 sidebar d-none d-lg-block">
+          <div class="col-xl-3 col-lg-4 sidebar d-none d-lg-block">
             <div class="sidebar-logo">
               <img src="../img/home_bg22.jpg" alt="logo" />
             </div>
@@ -77,7 +77,7 @@
               <div class="sidebar-menu">
                 <ul class="sidebar-list">
                   <li class="sidebar-item">
-                    <a href="" class="sidebar-link">
+                    <a href="home.html" class="sidebar-link">
                       <i class="bi bi-bullseye me-2 sidebar-icon"></i>Widok Ogólny </a>
                   </li>
                   <li class="sidebar-item">
@@ -120,13 +120,52 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-10 col-lg-9">
-            <div class="container">
-              <div class="block p-3">
+          <div class="col-xl-9 col-lg-8">
+            <section class="matches">
+              <div class="container">
                 <h2 class="match-incoming">Nadchodzące mecze</h2>
-                <hr class="match-line">
+                <div class="block p-3">
+                  <div class="row gx-3 gy-3">
+                    <div class="col-xl">
+                      <div class="match p-3">
+                        <p class="match-text">22.04.2024, 19:00</p>
+                        <hr class="line">
+                        <p class="match-title">UC Team vs UC Team</p>
+                        <hr class="line">
+                        <p class="match-text">13 Kolejka</p>
+                      </div>
+                    </div>
+                    <div class="col-lg">
+                      <div class="match p-3">
+                        <p class="match-text">22.04.2024, 19:00</p>
+                        <hr class="line">
+                        <p class="match-title">UC Team vs UC Team</p>
+                        <hr class="line">
+                        <p class="match-text">13 Kolejka</p>
+                      </div>
+                    </div>
+                    <div class="col-lg">
+                      <div class="match p-3">
+                        <p class="match-text">22.04.2024, 19:00</p>
+                        <hr class="line">
+                        <p class="match-title">UC Team vs UC Team</p>
+                        <hr class="line">
+                        <p class="match-text">13 Kolejka</p>
+                      </div>
+                    </div>
+                    <div class="col-lg">
+                      <div class="match p-3">
+                        <p class="match-text">22.04.2024, 19:00</p>
+                        <hr class="line">
+                        <p class="match-title">UC Team vs UC Team</p>
+                        <hr class="line">
+                        <p class="match-text">13 Kolejka</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>                  
               </div>
-            </div>
+            </section>
           </div>
         </div>
       </div>
