--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -123,7 +123,7 @@
           <div class="col-xl-9 col-lg-8">
             <section class="matches">
               <div class="container">
-                <h2 class="match-incoming">Nadchodzące mecze</h2>
+                <h2 class="block-header">Nadchodzące mecze</h2>
                 <div class="block p-3">
                   <div class="row gx-3 gy-3">
                     <div class="col-xl">
