dodanie czatu do sidebar

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -109,6 +109,10 @@
                     <a href="" class="sidebar-link">
                       <i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
                   </li>
+                  <li class="sidebar-item">
+                    <a href="" class="sidebar-link">
+                      <i class="bi bi-chat me-2 sidebar-icon"></i>Czat</a>
+                  </li>
                 </ul>
               </div>
               <hr class="sidebar-line" />
