--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -134,6 +134,71 @@
               <button type="button" onclick="sidebarToggle()" class="navbar-toggler" id="sidebarToggle">
                 <i class="bi bi-x-lg sidebar-mobile-icon"></i>
               </button>
+              <div class="sidebar-mobile-logo">
+                <img src="../img/home_bg22.jpg" alt="logo" class="img-fluid" />
+              </div>
+              <div class="sidebar-player text-center mt-5">
+                <div class="sidebar-nick">
+                  <p>UC Salerno <span>Klub</span>
+                  </p>
+                </div>
+                <div class="sidebar-budget">
+                  <p>4 380 650 <span>Budżet</span>
+                  </p>
+                </div>
+                <div class="sidebar-coins">
+                  <p>30 <span>Coins</span>
+                  </p>
+                </div>
+                <hr class="sidebar-line my-3">
+                <div class="sidebar-menu">
+                  <ul class="sidebar-list">
+                    <li class="sidebar-item">
+                      <a href="home.html" class="sidebar-link">
+                        <i class="bi bi-bullseye me-2 sidebar-icon"></i>Widok Ogólny </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-clipboard2-data-fill me-2 sidebar-icon"></i>Mój Zespół </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-arrow-left-right me-2 sidebar-icon"></i>Transfery </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-briefcase-fill me-2 sidebar-icon"></i>Sezon </a>
+                    </li>
+                  </ul>
+                </div>
+                <hr class="sidebar-line" />
+                <div class="sidebar-menu mt-3">
+                  <ul class="sidebar-list">
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-book-fill me-2 sidebar-icon"></i>FAQ </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-chat-square-text-fill me-2 sidebar-icon"></i>Społeczność </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link">
+                        <i class="bi bi-chat me-2 sidebar-icon"></i>Czat</a>
+                    </li>
+                  </ul>
+                </div>
+                <hr class="sidebar-line" />
+                <div class="sidebar-time mt-3">
+                  <p class="d-flex flex-column">
+                    <span id="sidebarTimeMobile"></span>
+                    <span id="sidebarWeeksMobile"></span>
+                  </p>
+                </div>
             </div>
           </div>
         </div>
