--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -114,10 +114,6 @@
                     <a href="" class="sidebar-link">
                       <i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
                   </li>
-                  <li class="sidebar-item">
-                    <a href="" class="sidebar-link">
-                      <i class="bi bi-chat me-2 sidebar-icon"></i>Czat</a>
-                  </li>
                 </ul>
               </div>
               <hr class="sidebar-line" />
@@ -154,19 +150,19 @@
                 <div class="sidebar-menu">
                   <ul class="sidebar-list">
                     <li class="sidebar-item">
-                      <a href="home.html" class="sidebar-link">
+                      <a href="home.html" class="sidebar-link sidebar-link-mobile">
                         <i class="bi bi-bullseye me-2 sidebar-icon"></i>Widok Ogólny </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
+                      <a href="" class="sidebar-link-mobile">
                         <i class="bi bi-clipboard2-data-fill me-2 sidebar-icon"></i>Mój Zespół </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
+                      <a href="" class="sidebar-link-mobile">
                         <i class="bi bi-arrow-left-right me-2 sidebar-icon"></i>Transfery </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
+                      <a href="" class="sidebar-link-mobile">
                         <i class="bi bi-briefcase-fill me-2 sidebar-icon"></i>Sezon </a>
                     </li>
                   </ul>
@@ -175,24 +171,25 @@
                 <div class="sidebar-menu mt-3">
                   <ul class="sidebar-list">
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
+                      <a href="" class="sidebar-link-mobile">
                         <i class="bi bi-book-fill me-2 sidebar-icon"></i>FAQ </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
+                      <a href="" class="sidebar-link-mobile">
                         <i class="bi bi-chat-square-text-fill me-2 sidebar-icon"></i>Społeczność </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
-                        <i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
+                      <a href="" class="sidebar-link-mobile"><i class="bi bi-basket-fill me-2 sidebar-icon"></i>Sklep </a>
                     </li>
                     <li class="sidebar-item">
-                      <a href="" class="sidebar-link">
-                        <i class="bi bi-chat me-2 sidebar-icon"></i>Czat</a>
+                      <a href="" class="sidebar-link-mobile"><i class="bi bi-chat me-2 sidebar-icon"></i>Wiadomości</a>
+                    </li>
+                    <li class="sidebar-item">
+                      <a href="" class="sidebar-link-mobile"><i class="bi bi-bell-fill me-2 sidebar-icon"></i>Powiadomienia</a>
                     </li>
                   </ul>
                 </div>
-                <hr class="sidebar-line" />
+                <hr class="sidebar-line">
                 <div class="sidebar-time mt-3">
                   <p class="d-flex flex-column">
                     <span id="sidebarTimeMobile"></span>
