--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -199,6 +199,9 @@
             </div>
           </div>
         </div>
+        <div class="col-xl-9 col-lg-8">
+
+        </div>
       </div>
     </main>
   </body>
