--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -200,7 +200,11 @@
           </div>
         </div>
         <div class="col-xl-9 col-lg-8">
-
+          <div class="row">
+            <div class="col-lg-4 match" id="match">
+              
+            </div>
+          </div>
         </div>
       </div>
     </main>
