pierwszy block meczu

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -200,9 +200,36 @@
           </div>
         </div>
         <div class="col-xl-9 col-lg-8">
-          <div class="row">
-            <div class="col-lg-4 match" id="match">
-              
+          <div class="container">
+            <div class="row">
+              <div class="col-xl">
+                <h1 class="match-title mb-3">Nadchodzący mecz</h1>
+                <div class="match px-3 py-4" id="match">
+                  <h4 class="match-league text-center">Liga</h4>
+                  <p class="match-date text-center">12.04.2024, 20:00</p>
+                  <hr class="match-line">
+                  <div class="match-game py-3">
+                    <div class="row gy-2">
+                      <div class="col-lg col-md">
+                        <img src="../img/home_bg22.jpg" alt="logo_druzyny_1" class="match-logo">
+                        <p class="match-team">
+                          UC Salerno
+                        </p>
+                      </div>
+                      <div class="col-lg col-md">
+                        <img src="../img/home_bg22.jpg" alt="logo_druzyny_2" class="match-logo">
+                        <p class="match-team">
+                          Real Madryt
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <hr class="match-line">
+                  <p class="match-round text-center">13 kolejka</p>
+                </div>
+              </div>
+              <div class="col-lg"></div>
+              <div class="col-xl"></div>
             </div>
           </div>
         </div>
