początki bloku nadchodzącego i poprzedniego

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -201,15 +201,15 @@
         </div>
         <div class="col-xl-9 col-lg-8">
           <div class="container">
-            <div class="row">
-              <div class="col-xl">
+            <div class="row gy-3">
+              <div class="col-xl col-lg col-md">
                 <h1 class="match-title mb-3">Nadchodzący mecz</h1>
-                <div class="match px-3 py-4" id="match">
+                <div class="match py-3" id="match">
                   <h4 class="match-league text-center">Liga</h4>
                   <p class="match-date text-center">12.04.2024, 20:00</p>
                   <hr class="match-line">
-                  <div class="match-game py-3">
-                    <div class="row gy-2">
+                  <div class="match-game">
+                    <div class="row">
                       <div class="col-lg col-md">
                         <img src="../img/home_bg22.jpg" alt="logo_druzyny_1" class="match-logo">
                         <p class="match-team">
@@ -228,8 +228,32 @@
                   <p class="match-round text-center">13 kolejka</p>
                 </div>
               </div>
-              <div class="col-lg"></div>
-              <div class="col-xl"></div>
+              <div class="col col-xl col-lg">
+                <h1 class="match-title mb-3">Poprzedni mecz</h1>
+                <div class="match py-3" id="last_match">
+                  <h4 class="match-league text-center">Liga</h4>
+                  <p class="match-date text-center">12.04.2024, 20:00</p>
+                  <hr class="match-line">
+                  <div class="match-game">
+                    <div class="row">
+                      <div class="col-lg col-md">
+                        <img src="../img/home_bg22.jpg" alt="logo_druzyny_1" class="match-logo">
+                        <p class="match-team">
+                          UC Salerno
+                        </p>
+                      </div>
+                      <div class="col-lg col-md">
+                        <img src="../img/home_bg22.jpg" alt="logo_druzyny_2" class="match-logo">
+                        <p class="match-team">
+                          Real Madryt
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <hr class="match-line">
+                  <p class="match-round text-center">13 kolejka</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
