--- a/src/pages/regulamin.html
+++ b/src/pages/regulamin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Regulamin</title>
     <link rel="stylesheet" href="../styles/regulamin.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
@@ -11,32 +11,29 @@
 </head>
 <body>
     <header class="header"> 
-      <nav class="navbar navbar-expand-lg py-4">
-        <div class="container-md">
-          <a href="../../index.html" class="navbar-brand">FOOTBALLTOPMANAGER</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="ms-auto">
-              <ul class="navbar-nav">
-                <li class="nav-item me-3">
-                  <a href="../../index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item me-3">
-                  <a href="" class="nav-link">Polityka Prywatności</a>
-                </li>
-                <li class="nav-item me-3">
-                  <a href="" class="nav-link">Konto</a>
-                </li>
-                <li class="nav-item">
-                  <a href="kontakt.html" class="nav-link">Kontakt</a>
-                </li>
-              </ul>
+        <nav class="navbar navbar-expand-lg py-4">
+          <div class="container-md">
+            <a href="../../index.html" class="navbar-brand">FOOTBALLTOPMANAGER</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="ms-auto">
+                <ul class="navbar-nav">
+                  <li class="nav-item me-3">
+                    <a href="../../index.html" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item me-3">
+                    <a href="rejestracja.html" class="nav-link">Rejestracja</a>
+                  </li>    
+                  <li class="nav-item">
+                    <a href="kontakt.html" class="nav-link">Kontakt</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </nav>
+        </nav>
     </header>
     <main class="main">
       <section class="hero d-flex justify-content-center align-items-center mb-4" id="hero">
@@ -61,7 +58,7 @@
         </div>
       </section>
       <section class="rules d-flex justify-content-center align-items-center my-5" id="hero">
-        <div class="container d-flex justify-content-center align-items-center">
+        <div class="container d-flex justify-content-center align-items-center py-md-5 py-0">
           <div class="rules-box py-5 px-3">
             <div class="circle d-none d-md-block"></div>
             <div class="circle d-none d-md-block"></div>
@@ -84,5 +81,33 @@
         </div>
       </section>
     </main>
+    <footer class="footer mt-5 p-3">
+      <div class="container">
+        <div class="row gx-0 gx-lg-5 mb-3">
+          <div class="col-lg-6">
+            <div class="content">
+              <h5 class="title">FOOTBALLTOP</h5>
+              <p class="text opacity-75">
+                Lubisz piłkę nożną i od zawsze marzyłeś aby poprowadzić swój ulubiony klub w lidze i pucharach? U nas masz taką możliwość. Dołącz do społeczności trenerów i graj za darmo w menadżera Footballtop.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="d-flex justify-content-center align-items-center flex-column">
+              <a type="button" href="../../index.html" class="btn-starts mt-1 mb-3 w-100 text-decoration-none">
+                Graj
+              </a>
+              <a type="button" href="https://discord.gg/57Sp5aVARu" class="btn-starts mb-1 w-100 text-decoration-none">
+                Discord
+              </a>
+            </div>
+          </div>
+        </div>
+        <hr class="hr w-100 mx-auto opacity-75">
+        <div class="d-flex flex-column justify-content-between mt-4 mb-4 text-start text-md-end">
+          <p>© <span id="year"></span> <span class="text-uppercase fw-bolder">FOOTBALLTOPMANAGER</span> Wszelkie prawa zastrzeżone.</p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
